src/App.css
.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #1f2229;
  height: 100vh;
}

.App h1 {
  color: white;
  margin-top: 5rem;
}

.App .dog {
  width: 400px;
  height: 400px;
  object-fit: cover;
  margin-top: 1rem;
  border-radius: 10px;
}

.App button {
  margin-top: 3rem;
  margin-bottom: 2rem;
  font-size: 20px;
}

